# PersianToolsWeb

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
assets/: main.css
docs/: index.html  tailwind.css
docs/assets/dioxus/: persian-tools-web.js  persian-tools-web_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: main.rs  router.rs
src/core/: add_commas.rs  mod.rs  remove_commas.rs  tool.rs  wrapper.rs
src/ui/: home.rs  mod.rs  search_tool.rs  tool.rs  tool_list_item.rs  top_bar.rs
