[package]
name = "persian-tools-web"
version = "0.1.0"
authors = ["Ali Ghahremani <alighahremani1377@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
rust-persian-tools = { version = "1.1.2", features = ["full"] }
lazy_static = "1.4.0"

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
